# bigue-analysis

./: .gitignore  .gitmodules  README.md  config.py  generate_conflicting_embeddings.py  link_prediction.py  matplotlibrc  requirements.txt  sample.py  util.py
.data/: 100v_embedding.json  conflicting.txt  conflicting_embedding1.json  dutch_criticism.txt  kangaroo.txt  montreal.txt  november17.txt
.raw_data/100v/: graph.inf_coord  graph.inf_log  graph.txt  graph_info.json  mercator_embedding.json
.raw_data/30v/: graph.inf_coord  graph.inf_log  graph_info.json  mercator_embedding.json
.raw_data/30v_hmc/: graph.inf_coord  graph.inf_log  graph.txt  mercator_embedding.json
.raw_data/30v_long/: graph.inf_coord  graph.inf_log  graph.txtgraph_link_pred.txt  (+1681 more)
basegraph_libs/BaseGraphGeometry/python/: CMakeLists.txt
config/: 100v.yaml  30v.yaml  30v_hmc.yaml  30v_long.yaml  30v_rw.yaml  30v_rw_long.yaml  conflicting.yaml  dutch_criticism.yaml  kangaroo.yaml  karate.yaml  macaque_neural.yaml  montreal.yaml  new_guinea_tribes.yaml  november17.yaml  zebras.yaml
nauty-automorph/: .gitignore  makefile.in  nauty-automorph.c
results/: auc.py  autocovariance.py  average_density.py  clearcache.py  compare_properties.py  correlation.py  errorbars.py  fig_autocovariance.py  fig_compare_algs.py  fig_distance_approx.py  fig_empirical_properties.py  fig_marginals.py  groundtruth_hyperbolic.py  hyperbolic_errorbars.py  likelihood_traceplot.py  link_prediction_hist.py  modelingtools.py  paths.py  plot_graph.py  plot_tools.py  vertex_approx_likelihood.py  vertex_likelihood.py
(+498 files in other folders)
